Fix overflow caused by banner
Banner overflows viewport width resulting in a horizontal scroll when there should be none.

--- a/app/components/site-banner/style.css
+++ b/app/components/site-banner/style.css
@@ -1,5 +1,7 @@
 & .banner-row {
     padding: 5px 0;
+    width: 100%;
+    margin: 0 0;
 }
 
 & .banner {
